[package]
name = "toml_schema"
version = "0.1.0"
edition = "2021"
exculde = ["/test_files", "README.md"]
license = "GPL-3.0"
description = "A crate for quicky checking the structure of TOML data, similar to JSON schemas"
repository = "https://github.com/breakmit-0/toml_schema"
categories = ["parser-implementations"]
keywords = ["toml", "schema", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
regex = "1.10.2"
toml = "0.8.8"
